# home_tasks

./: pyproject.toml
_11_2_tasks/src/: task_4_1.py
_12_1_tasks/data/: transactions.json
_12_1_tasks/src/: task_5_1.py  task_5_2.py
_9_1_tasks/src/: task_1.py  task_2.py  task_3.py
_9_2_tasks/data/: eng_names.txt  rus_names.txt
_9_2_tasks/src/: functions.py
