[project]
name = "python-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "xziste",email = "17alexdmz99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
